# comP

./: .gitignore  .markdownlint.json  .markdownlintrc.json  .mocharc.json  .vscodeignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  README_ja.md  SBOM.json  SECURITY.md  SUPPORT.md  edevcomPdaemonCargo.toml  edevcomPdaemonsrcgraph.rs  edevcomPdaemonsrcindexer.rs  edevcomPdaemonsrcmain.rs  edevcomPdaemonsrcmcp.rs  edevcomPdaemonsrcsearch.rs  package-lock.json  package.json  plan2.md  prompt.md  qiita.md  tsconfig.json
.claude/: settings.json
.claude/hooks/: context-inject.sh  danger-guard.sh  stop-checklist.sh  write-confirm.sh
.claude/skills/context-checkpoint/: SKILL.md
.claude/skills/oss-init/: SKILL.md
.claude/skills/pre-push-check/: SKILL.md
.claude/skills/skeleton-first/: SKILL.md
.claude/skills/tdd-flow/: SKILL.md
.github/: copilot-instructions.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ci.yml  pages.yml  release.yml
.husky/: pre-commit
daemon/: Cargo.toml  build_output.txt
daemon/src/: main.rs
daemon/src/graph/: mod.rs  schema.rs
daemon/src/indexer/: dependency.rs  doc_parser.rs  mod.rs  parser.rs  walker.rs
daemon/src/ipc/: mod.rs
daemon/src/mcp/: compress.rs  mod.rs  relevance.rs
daemon/src/search/: mod.rs
daemon/tests/data/: test.parquet
docs/: ARCHITECTURE.md  ARCHITECTURE_ja.md  CONTEXT_ENGINEERING_PLAN.md  STANDARDS_CICD.md  STANDARDS_CODING.md  STANDARDS_LOGGING.md  STANDARDS_OSS_INIT.md  conversation_log.md  index.css  index.html  index_ja.html  work_plan.md
docs/compliance/: README.md  vex.cdx.json
docs/dev/: CICD.md  CODING.md  ERROR_HANDLING.md  MARKDOWN.md  OSS_INIT.md
docs/lt20260625/: slide.html
docs/user/: CONFIGURATION.md  GETTING_STARTED.md  MCP_SETUP.md  MCP_TOOLS.md
scripts/: generate-icon-activitybar.js  generate-icon-png.js  generate-icon.js
src/: extension.ts  test-setup.ts
src/daemon/: DaemonManager.ts  protocol.ts
src/daemon/tests/: DaemonManager.test.ts
src/mcp/: AgentSetup.ts  chatParticipant.ts  sessionMemory.ts
src/mcp/tests/: AgentSetup.test.ts  sessionMemory.test.ts
src/templates/: antigravity-settings.json  copilot-instructions.md
src/test/: mergeExclude.test.ts  setup.ts
src/types/: index.ts
src/ui/: CodeLens.ts  SidebarPanel.ts  StatusBar.ts  commands.ts
src/ui/tests/: CodeLens.test.ts  SidebarPanel.test.ts  StatusBar.test.ts  commands.test.ts
src/webview/: stats.css  stats.html  stats.js
