[package]
name = "comp-daemon"
version = "0.1.0"
edition = "2021"
authors = ["comP Contributors"]
license = "MIT"
description = "Local-first code indexing daemon for AI agents"

[[bin]]
name = "comp-daemon"
path = "src/main.rs"

[dependencies]
tokio = { version = "1.35", features = ["full"] }
tree-sitter = "0.20"
rusqlite = { version = "0.30", features = ["bundled"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
thiserror = "1.0"
log = "0.4"
env_logger = "0.11"
walkdir = "2.4"
sha2 = "0.10"
regex = "1.10"

[dev-dependencies]
tempfile = "3.8"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1

[profile.dev]
opt-level = 0
