[package]
name = "comp-daemon"
version = "0.9.2"
edition = "2021"
authors = ["comP Contributors"]
license = "MIT"
description = "Local-first code indexing daemon for AI agents"

[[bin]]
name = "comp-daemon"
path = "src/main.rs"

[dependencies]
tokio = { version = "1.35", features = ["full"] }
tree-sitter = "0.23"
rusqlite = { version = "0.30", features = ["bundled"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
thiserror = "1.0"
log = "0.4"
env_logger = "0.11"
ignore = "0.4"
sha2 = "0.10"
regex = "1.10"
quick-xml = "0.40.1"
zip = { version = "0.6", default-features = false, features = ["deflate"] }
tree-sitter-rust = "0.23"
tree-sitter-javascript = "0.23"
tree-sitter-typescript = "0.23"
tree-sitter-python = "0.23"
tree-sitter-go = "0.23"
tree-sitter-html = "0.23"
tree-sitter-c = "0.23"
tree-sitter-cpp = "0.23"
tree-sitter-java = "0.23"
# Pin: 0.23.5 was regenerated at grammar ABI 15, which the tree-sitter 0.23 runtime
# (max ABI 14) rejects at load. 0.23.1 is generated at ABI 14.
tree-sitter-c-sharp = "=0.23.1"
lopdf = "0.42"
parquet2 = "0.17.2"

[dev-dependencies]
tempfile = "3.8"

[profile.release]
opt-level = "s"
lto = true
codegen-units = 1
strip = true

[profile.dev]
opt-level = 0
